# xcvm-executor

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  general-questions.md
.github/workflows/: build.yml
src/: cross_chain.rs  executor.rs  lib.rs  relayer.rs  state.rs  verifier.rs
