[package]
name = "yogachain-xcvm-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography (for zk-SNARK verification)
bellman = "0.13"
jubjub = "0.10.0"

# Cross-Chain Messaging & Execution
tokio = { version = "1", features = ["full"] }

# Blockchain Integration
yogachain-core = { path = "../core" }
yogachain-contracts = { path = "../contracts" }
